tests/negative/NestedAsPatterns.juvix
module NestedAsPatterns;

f : Type -> Type
| a@b@_ := a;

end;
